<resources>
    <string name="app_name">PlaceMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sample_feed_text">Lorem Ipsum dorem sola ti</string>
    <string name="sample_feed_title">Feed Title</string>
    <string name="sample_location">Location</string>
    <string name="sample_creator">Creator</string>
    <string name="settings">Settings</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_settings">Settings</string>
    <string name="title_discuss">Discuss</string>
    <string name="title_alumni">Alumni</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <array name="sort_options">
        <item>Most Recent</item>
        <item>Most Popular</item>
        <item>By Tags</item>
    </array>
</resources>
