<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_jobs"
        android:icon="@drawable/job_alert_black_24dp"
        android:title="@string/title_jobs"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_alumni"
        android:title="@string/title_alumni"
        android:icon="@drawable/alumni_icon"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_notifications"
        android:title="@string/title_discuss"
        android:icon="@drawable/ic_help_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom"/>

</menu>
