<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/holo_green_dark"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:layout_margin="5dp">
    <ImageView
        android:tint="#80000000"
        android:id="@+id/feed_img"
        android:layout_width="match_parent"
        android:src="@drawable/sampleconference"
        android:layout_height="280dp"
        android:scaleType="fitXY" />
    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_above="@id/feed_body"
        android:id="@+id/feed_title"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_feed_title"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@android:color/white" />
    <TextView
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/feed_body"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_feed_text"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/feed_tray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="0"
            android:textColor="@android:color/white"
            android:drawablePadding="10dp"
            android:backgroundTint="@android:color/transparent"
            android:tint="@android:color/white"
            android:background="@drawable/img_btn_clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_star_inactive"/>
        <ImageButton
            android:padding="10dp"
            android:tint="@android:color/white"
            android:background="@drawable/img_btn_clickable"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_comment"/>
        <ImageButton
            android:padding="10dp"
            android:tint="@android:color/white"
            android:background="@drawable/img_btn_clickable"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"/>
    </LinearLayout>
    <TextView
        android:layout_marginBottom="5dp"
        android:layout_alignStart="@id/feed_loc_icon"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_creator"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/white"
        android:id="@+id/feed_creator"/>
    <ImageView
        android:tint="@android:color/white"
        android:layout_marginStart="10dp"
        android:layout_below="@id/feed_creator"
        android:id="@+id/feed_loc_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_location"/>
    <TextView
        android:gravity="center_vertical"
        android:layout_alignBottom="@id/feed_loc_icon"
        android:layout_alignTop="@id/feed_loc_icon"
        android:layout_below="@id/feed_creator"
        android:layout_toEndOf="@id/feed_loc_icon"
        android:id="@+id/feed_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sample_location"/>
</RelativeLayout>